--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 layout: default
 ---
 <div>
-  <head>About</head>
+  <h1>About</h1>
   <p>The Cold War and Word Embeddings: Exploring Gender in the <i>FRUS</i> Series, 1945-1968</p>
   <p>This project explores the language used by State Department officials during the Cold War. By isolating the documents concerning Latin American nations during the early years of the Cold War, this project seeks to examine how the State Department regarded gender within the Western hemisphere between 1945-1968.</p>
+<p>Below are current blog posts:</p>
 </div>
 <div class="posts">
   {% for post in site.posts %}
